--- a/src/accounts/templates/accounts/settings.html
+++ b/src/accounts/templates/accounts/settings.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="card-basic">
+        <div class="space-nav-fixed card-basic">
             <h2>Settings</h2>
 
             <h3>Informações</h3>
