refactor: footer margin-top updated to 20px

--- a/src/core/static/css/footer.css
+++ b/src/core/static/css/footer.css
@@ -16,9 +16,9 @@
 }
 
 footer {
-    padding: 45px;
-    padding-top: 40px;
+    padding: 40px 45px 45px;
     background-color: #e0e0e3;
+    margin-top: 20px!important;
 }
 
 footer h4, footer h6 {
